[build-system]
requires = ["hatchling>=1.21.1"]
build-backend = "hatchling.build"

[project]
name = "nexus"
version = "0.1.0"
description = "Local-first terminal toolkit for crypto, OSINT, logs, enumeration"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Nexus"}]
license = {text = "MIT"}
dependencies = [
  "click>=8.1",
  "duckdb>=1.0",
  "pyarrow>=16.0",
  "pandas>=2.2",
]

[project.scripts]
nexus = "nexus.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/nexus"]
